--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <nav class="bg-white shadow-sm border-b border-gray-200">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16 items-center">
-                <a href="/" class="text-xl font-bold text-indigo-600">NexusLab</a>
+                <a href="https://nexuslab.pl" class="text-xl font-bold text-indigo-600">NexusLab</a>
                 <div class="flex items-center space-x-4">
                     {% if user.is_authenticated %}
                         <span class="text-sm text-gray-600">{{ user.email }}</span>
